--- a/project-kafka/kafka_config.conf
+++ b/project-kafka/kafka_config.conf
@@ -1,25 +1,22 @@
+[KAFKA]
+bootstrap.servers = ${KAFKA_CONSUMER_BOOTSTRAP_SERVERS:'localhost:9094,localhost:9194,localhost:9294'}
+security.protocol = ${KAFKA_SECURITY_PROTOCOL:SASL_PLAINTEXT}
+sasl.mechanism = ${KAFKA_SASL_MECHANISM:PLAIN}
+sasl.username = ${KAFKA_DEFAULT_SASL_USERNAME}
+sasl.password = ${KAFKA_DEFAULT_SASL_PASSWORD}
+
+
 [KAFKA_CONSUMER_MAIN]
 bootstrap.servers = ${KAFKA_CONSUMER_MAIN_BOOTSTRAP_SERVERS}
-security.protocol = ${KAFKA_CONSUMER_MAIN_SECURITY_PROTOCOL}
-sasl.mechanism = ${KAFKA_CONSUMER_MAIN_SASL_MECHANISM}
-sasl.username = ${KAFKA_CONSUMER_MAIN_SASL_USERNAME}
-sasl.password = ${KAFKA_CONSUMER_MAIN_SASL_PASSWORD}
 group.id = ${KAFKA_CONSUMER_MAIN_GROUP_ID}
 auto.offset.reset = ${KAFKA_CONSUMER_MAIN_AUTO_OFFSET_RESET}
 
 [KAFKA_PRODUCER_LOCAL]
 bootstrap.servers = ${KAFKA_PRODUCER_LOCAL_BOOTSTRAP_SERVERS}
-security.protocol = ${KAFKA_PRODUCER_LOCAL_SECURITY_PROTOCOL}
-sasl.mechanism = ${KAFKA_PRODUCER_LOCAL_SASL_MECHANISM}
-sasl.username = ${KAFKA_PRODUCER_LOCAL_SASL_USERNAME}
-sasl.password = ${KAFKA_PRODUCER_LOCAL_SASL_PASSWORD}
+
 
 [KAFKA_CONSUMER_LOCAL]
 bootstrap.servers = ${KAFKA_CONSUMER_LOCAL_BOOTSTRAP_SERVERS}
-security.protocol = ${KAFKA_CONSUMER_LOCAL_SECURITY_PROTOCOL}
-sasl.mechanism = ${KAFKA_CONSUMER_LOCAL_SASL_MECHANISM}
-sasl.username = ${KAFKA_CONSUMER_LOCAL_SASL_USERNAME}
-sasl.password = ${KAFKA_CONSUMER_LOCAL_SASL_PASSWORD}
 group.id = ${KAFKA_CONSUMER_LOCAL_GROUP_ID}
 auto.offset.reset = ${KAFKA_CONSUMER_LOCAL_AUTO_OFFSET_RESET}
 
