update file .conf

--- a/project-kafka/kafka_config.conf
+++ b/project-kafka/kafka_config.conf
@@ -1,6 +1,6 @@
 
 [KAFKA_CONSUMER_MAIN]
-bootstrap.servers = ${KAFKA_CONSUMER_MAIN_BOOTSTRAP_SERVERS:'localhost:9094,localhost:9194,localhost:9294'}
+bootstrap.servers = ${KAFKA_CONSUMER_MAIN_BOOTSTRAP_SERVERS:localhost:9094,localhost:9194,localhost:9294}
 security.protocol = ${KAFKA_CONSUMER_MAIN_SECURITY_PROTOCOL:SASL_PLAINTEXT}
 sasl.mechanism = ${KAFKA_CONSUMER_MAIN_SASL_MECHANISM:PLAIN}
 sasl.username = ${KAFKA_CONSUMER_MAIN_SASL_USERNAME}
@@ -9,7 +9,7 @@ group.id = ${KAFKA_CONSUMER_MAIN_GROUP_ID}
 auto.offset.reset = ${KAFKA_CONSUMER_MAIN_AUTO_OFFSET_RESET}
 
 [KAFKA_PRODUCER_LOCAL]
-bootstrap.servers = ${KAFKA_PRODUCER_LOCAL_BOOTSTRAP_SERVERS:'localhost:9094,localhost:9194,localhost:9294'}
+bootstrap.servers = ${KAFKA_PRODUCER_LOCAL_BOOTSTRAP_SERVERS:localhost:9094,localhost:9194,localhost:9294}
 security.protocol = ${KAFKA_PRODUCER_LOCAL_SECURITY_PROTOCOL:SASL_PLAINTEXT}
 sasl.mechanism = ${KAFKA_PRODUCER_LOCAL_SASL_MECHANISM:PLAIN}
 sasl.username = ${KAFKA_PRODUCER_LOCAL_SASL_USERNAME}
@@ -17,7 +17,7 @@ sasl.password = ${KAFKA_PRODUCER_LOCAL_SASL_PASSWORD}
 
 
 [KAFKA_CONSUMER_LOCAL]
-bootstrap.servers = ${KAFKA_CONSUMER_LOCAL_BOOTSTRAP_SERVERS:'localhost:9094,localhost:9194,localhost:9294'}
+bootstrap.servers = ${KAFKA_CONSUMER_LOCAL_BOOTSTRAP_SERVERS:localhost:9094,localhost:9194,localhost:9294}
 security.protocol = ${KAFKA_CONSUMER_LOCAL_SECURITY_PROTOCOL:SASL_PLAINTEXT}
 sasl.mechanism = ${KAFKA_CONSUMER_LOCAL_SASL_MECHANISM:PLAIN}
 sasl.username = ${KAFKA_CONSUMER_LOCAL_SASL_USERNAME}
